@@ -1,3 +1,8 @@
+Wed, 14 Nov 2007 19:19:11 +0100 <thp@perli.net>
+Slipstream code (enumerate instead of simple position tracking)
+	* src/gpodder/libipodsync.py: Use enumerate() to iterate over a list
+	of episodes instead of keeping track of the position "by hand"
+
 Wed, 14 Nov 2007 19:17:51 +0100 <thp@perli.net>
 Ignore initial window events from GtkWindow in Config
 
